/*
 * Copyright 2019, Offchain Labs, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package evm;
option go_package = "github.com/offchainlabs/arbitrum/packages/arb-validator-core/evm";

message NodeLocation {
    string nodeHash = 1;
    uint64 nodeHeight = 2;
    string l1TxHash = 3;
}

message FullLogBuf {
    string address = 1;
    NodeLocation location = 2;
    string data = 4;
    string logIndex = 5;
    repeated string topics = 6;
    string transactionIndex = 7;
    string transactionHash = 8;
    string index = 9;
}

message AVMLogProof {
    string logPreHash = 1;
    string logPostHash = 2;
    repeated string logValHashes = 3;
}

message TxInfoBuf {
    bool found = 1;
    string rawVal = 2;
    string txHash = 3;
    uint64 txIndex = 4;
    uint64 startLogIndex = 5;
    NodeLocation location = 6;
    AVMLogProof proof = 7;
}

message TopicGroup {
    repeated string topics = 1;
}

message FindLogsArgs {
    string fromHeight = 1;
    string toHeight = 2;
    repeated string addresses = 3;
    repeated TopicGroup topicGroups = 4;
}

message FindLogsReply {
    repeated FullLogBuf logs = 4;
}

message GetOutputMessageArgs {
    string AssertionNodeHash = 1;
    string MsgIndex = 2;
}

message GetOutputMessageReply {
    bool found = 1;
    string rawVal = 2;
}

message GetMessageResultArgs {
    string txHash = 1;
}

message GetMessageResultReply {
    TxInfoBuf tx = 1;
}

message GetAssertionCountArgs {

}

message GetAssertionCountReply {
    int32 assertionCount = 1;
}

message GetVMInfoArgs {

}

message GetVMInfoReply {
    string vmID = 1;
}

message CallMessageArgs {
    string data = 1;
    string sender = 2;
}

message CallMessageReply {
    string rawVal = 1;
}

message GetLatestNodeLocationArgs {
}

message GetLatestNodeLocationReply {
    NodeLocation location = 1;
}

service RollupValidator {
    rpc GetOutputMessage (GetOutputMessageArgs) returns (GetOutputMessageReply);
    rpc GetMessageResult (GetMessageResultArgs) returns (GetMessageResultReply);
    rpc CallMessage (CallMessageArgs) returns (CallMessageReply);
    rpc FindLogs (FindLogsArgs) returns (FindLogsReply);
    rpc GetAssertionCount (GetAssertionCountArgs) returns (GetAssertionCountReply);
    rpc GetVMInfo (GetVMInfoArgs) returns (GetVMInfoReply);
    rpc GetLatestNodeLocation (GetLatestNodeLocationArgs) returns (GetLatestNodeLocationReply);
    rpc GetLatestPendingNodeLocation (GetLatestNodeLocationArgs) returns (GetLatestNodeLocationReply);
}
